--- a/src/app/auth/auth-form.component.html
+++ b/src/app/auth/auth-form.component.html
@@ -35,9 +35,9 @@
         <img src="assets/layout/images/login/lock.png" class="lock-icon">
     </div>
 </div>
-<div class="col-12 chkbox-container">
-    <a href="">Forgot password?</a>
-</div>
+<!--<div class="col-12 chkbox-container">-->
+<!--    <a href="">Forgot password?</a>-->
+<!--</div>-->
 <div class="col-12 button-container">
     <button type="button" pButton label="Sign In" class="p-button-info p-button-raised" (click)="save()"></button>
 </div>
