--- a/src/app/book/book-page.component.html
+++ b/src/app/book/book-page.component.html
@@ -2,12 +2,10 @@
     <div class="col-12">
         <div class="card">
             <h4>Book Page</h4>
-            <p>Book page content.</p>
             <p-toolbar styleClass="mb-4">
                 <ng-template pTemplate="left">
                     <div>
-                        <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
-                        <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
+                        <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="newItem()"></button>
                     </div>
                 </ng-template>
             </p-toolbar>
@@ -17,11 +15,11 @@
                      [lazy]="true"
                      (onLazyLoad)="loadItems($event)"
                      responsiveLayout="scroll"
-                     [rows]="2"
+                     [rows]="5"
                      [totalRecords]="totalItems"
                      [globalFilterFields]="['name','country.name','representative.name','status']"
                      [paginator]="true"
-                     [rowsPerPageOptions]="[2]"
+                     [rowsPerPageOptions]="[2, 5, 10]"
                      [showCurrentPageReport]="true"
                      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
                      [rowHover]="true"
@@ -31,27 +29,48 @@
                         <th *ngFor="let col of columns">
                             {{col.header}}
                         </th>
+                        <th></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-item let-columns="columns">
                     <tr>
                         <td *ngFor="let col of columns">
-                            {{item[col.field]}}
+                            {{col.field(item)}}
+                        </td>
+                        <td>
+                            <div class="flex">
+                                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editItem(item)"></button>
+                                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteItem(item)"></button>
+                            </div>
                         </td>
                     </tr>
                 </ng-template>
             </p-table>
         </div>
 
+        <p-blockUI [blocked]="saving"><p-progressSpinner styleClass="p-progress-path"></p-progressSpinner></p-blockUI>
 
-        <p-dialog [(visible)]="showBookDialog" [style]="{width: '450px'}" header="Book Details" [modal]="true" class="p-fluid">
+        <p-dialog [(visible)]="showDialog" [style]="{width: '450px'}" header="Book Details" [modal]="true" class="p-fluid">
             <ng-template pTemplate="content">
-                <app-book-form #bookForm></app-book-form>
+                <app-book-form #bookForm [item]="currentItem"
+                               (saving)="onItemSaving($event)"
+                               (saved)="onItemSaved()"></app-book-form>
             </ng-template>
 
             <ng-template pTemplate="footer">
                 <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
                 <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="bookForm.saveBook()"></button>
+            </ng-template>
+        </p-dialog>
+
+        <p-dialog [(visible)]="showDeleteDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
+            <div class="flex align-items-center justify-content-center">
+                <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+                <span>Are you sure you want to delete?</span>
+            </div>
+            <ng-template pTemplate="footer">
+                <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No" (click)="hideDeleteDialog()"></button>
+                <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDeleteItem()"></button>
             </ng-template>
         </p-dialog>
     </div>
