Fix auth process

--- a/src/app/auth/auth-form.component.html
+++ b/src/app/auth/auth-form.component.html
@@ -1,21 +1,3 @@
-<!--<form>-->
-<!--    <div class="field">-->
-<!--        <label htmlFor="name">Login</label>-->
-<!--        <input pInputText name="name" type="text"-->
-<!--               (ngModelChange)="update()"-->
-<!--               [(ngModel)]="authModel.login"/>-->
-<!--    </div>-->
-
-<!--    <div class="field">-->
-<!--        <label htmlFor="email">Password</label>-->
-<!--        <input pInputText name="email" type="text"-->
-<!--               (ngModelChange)="update()"-->
-<!--               [(ngModel)]="authModel.password"/>-->
-<!--    </div>-->
-
-<!--    <button pButton label="Submit" (click)="save()"></button>-->
-<!--</form>-->
-
 <div class="col-12">
     <label>Username</label>
     <div class="input-wrapper">
@@ -35,9 +17,10 @@
         <img src="assets/layout/images/login/lock.png" class="lock-icon">
     </div>
 </div>
-<!--<div class="col-12 chkbox-container">-->
+<div class="col-12 chkbox-container">
 <!--    <a href="">Forgot password?</a>-->
-<!--</div>-->
+    <div>{{lastError$ | async}}</div>
+</div>
 <div class="col-12 button-container">
     <button type="button" pButton label="Sign In" class="p-button-info p-button-raised" (click)="save()"></button>
 </div>
