--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,5 @@ $gutter: 1rem; //for primeflex grid system
 @import "../node_modules/@fullcalendar/timegrid/main.min.css";
 @import "assets/demo/flags/flags.css";
 @import "assets/demo/documentation.scss";
+@import "assets/layout/css/layout-default.scss";
+@import "assets/theme/theme-blue.scss";
